# WinDoctor

./: .gitignore  ADVANCED.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  WinDoctor.toml  rules.json
src/: decoder.rs  device_map.rs  dllwalker.rs  event_xml.rs  file_scan.rs  hints.rs  html.rs  main.rs  markdown.rs  perf.rs  rules.rs  windows_live.rs
